# rag-chatbot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: api.md  architecture.md  modules.md  overview.md  setup.md  tech-stack.md
docs/superpowers/plans/: 2026-04-24-rag-chatbot-starter.md
docs/superpowers/specs/: 2026-04-24-rag-chatbot-starter-design.md
scripts/: install.sh  release.sh  upgrade.sh
services/: rag-chatbot.service
src/rag_chatbot/: __init__.py  __main__.py  api_server.py  document_loader.py  rag_engine.py
tests/: conftest.py  test_api_server.py  test_document_loader.py  test_integration.py  test_rag_engine.py  test_upgrade_script.py
